# clash-tui

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md  build.rs  project.md
.github/workflows/: release.yml
src/: app.rs  lib.rs  main.rs
src/clash/: client.rs  ipc_client.rs  mod.rs  types.rs
src/config/: app_config.rs
src/core/: mod.rs
src/daemon/: mod.rs
src/event/: action.rs  keymap.rs
src/hotkey/: mod.rs
src/ipc/: client.rs  protocol.rs  server.rs
src/proxy/: mod.rs
src/state/: store.rs
src/subscription/: mod.rs
src/ui/: layout.rs  mod.rs  theme.rs
src/ui/components/: help_bar.rs  mod.rs  status_bar.rs  tabs.rs
src/ui/pages/: connections.rs  dashboard.rs  logs.rs  mod.rs  proxies.rs  rules.rs  settings.rs  subscriptions.rs
themes/: catppuccin.toml  tokyo-night.toml
