[package]
name = "clash-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json"] }

openssl = { version = "0.10", features = ["vendored"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

anyhow = "1"
thiserror = "2"

directories = "5"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

futures = "0.3"

async-trait = "0.1"
clap = { version = "4", features = ["derive"] }

base64 = "0.22"
flate2 = "1"
zip = "2"

[build-dependencies]
flate2 = "1"
zip = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
